# marimo_ngs

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  deployment_report.xlsx  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  run_local.bat  upgrade.sh
apps/: duty-roster-solver.py  duty-roster-solver.py.20270728  duty-roster-solver.py.stable  hello-world.py  ngs-fairness-solver.ipynb  ngs-fairness-solver.py
apps/duty-roster-solver-files/: duty_roster_input_template.xlsx  duty_roster_input_template_0629.xlsx  duty_roster_input_template_0630.xlsx  duty_roster_input_template_0630_no_div more_flex_hour.xlsx  duty_roster_input_template_0630_no_div no_flex.xlsx  duty_roster_input_template_0630_no_div.xlsx  duty_roster_input_template_TEST.xlsx
apps/files/duty-roster-solver-files/: Bowling_Duty_roster_input_template.xlsx  _Test_Paradance.xlsx  duty_roster_input_template_0630_no_div.xlsx
apps/files/ngs-fairness-solver-files/: 3-16Nov_14 Days_ngs_fairness_solver_input_tmpl1.xlsx  30Nov-15Dec_16 Days_ngs_fairness_solver_input_tmpl.xlsx  7 DAY_ngs_fairness_solver_input_tmpl.xlsx  ngs_fairness_solver_input_0705.xlsx  ngs_fairness_solver_input_0904.xlsx  ngs_fairness_solver_input_nte.xlsx
apps/files/ngs-fairness-solver-files-output/: deployment_report.xlsx
apps/ngs-fairness-solver-files/: deployment_report.xlsx  ngs_fairness_solver_input_tmpl.xlsx
apps/ngs-fairness-solver-files-output/: deployment_report.xlsx
templates/: home.html  login.html
