[project]
name = "marimo-ngs"
version = "0.1.0"
description = "NGS Apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "marimo>=0.14.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "ortools>=9.14.6206",
    "pandas>=2.3.0",
    "pulp>=3.2.1",
    "pyarrow>=20.0.0",
    "python-multipart>=0.0.20",
    "xlsxwriter>=3.2.5",
]
